--- a/html-practico-siete/a/style.css
+++ b/html-practico-siete/a/style.css
@@ -7,7 +7,7 @@
 } 
 .conteiner{
     width: 100%;
-    height: 500px;
+    height: 100%;
     padding: 2vw;
     padding-bottom: 60px;
     border: 1px solid black;
@@ -20,7 +20,7 @@
     border: 1px solid black;
     border-radius: 10px;
     width: 100%;
-    height: 150px;
+    height: 100%;
 }
 .titulo{
     text-align: center;
