--- a/html-practico-siete/sobre-mi.css
+++ b/html-practico-siete/sobre-mi.css
@@ -3,10 +3,10 @@
     flex-direction: column;
     margin: auto;
     padding: auto; 
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .col{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 20px;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,6 @@
         text-decoration: underline;
         grid-column: 2/3;
         grid-row: 1/2;
-
     }
     #p-sobre-mi{
         grid-column: 2/3;
@@ -49,4 +48,10 @@
 }
 #text-sobre-mi h2{
     text-decoration: underline
+}
+#img-sobre-mi{
+    border-radius: 20px;
+}
+.card-title{
+    text-align: center;
 }
