--- a/html-practico-seis/style.css
+++ b/html-practico-seis/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Press Start 2P", system-ui;
     font-style: normal;
-    
+    background-color: rgb(34, 34, 34);
 }
 .background-top {
     position: absolute;
@@ -15,17 +15,20 @@ body {
     z-index: 1;
 }
 .background-bottom {
-    position: absolute;
     top: 250px;
     left: 0px;
     width: 100%;
     height: calc(100% - 100px);
     background-image: url(./img/Background-HiDPI.jpg);
-    background-repeat: repeat-x;
+    background-repeat: repeat;
     background-position: top;
+    margin-top: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 header {
-    border: 1px solid black;
     width: 80%;
     margin: 0 auto;
     font-size: 10px;
@@ -39,7 +42,7 @@ header {
     padding: 10px;
 }
 .logo img{
-    width: 50px;
+    width: 70px;
     border-radius: 10%;
     margin-left: 18px; 
 }
@@ -48,6 +51,43 @@ h1{
     margin-right: 30px;
     border-bottom: 2px solid red;
 }
-a :hover{
+.logo :hover{
     transform: scale(1.1);
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid white; */
+    /* display: grid;
+    grid-template-rows: repeat(9, 1fr); */
+}
+.container img{
+    height: 200px;
+    margin: 15px;
+    border-radius: 10px;
+}
+footer{
+    background-color: white;
+    text-align: center;
+}
+h2{
+    text-decoration: underline;
+}
+@media (min-width:600px){
+    .container{
+        margin-top: 300px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
+    .container img{
+        height: 400px;
+        box-shadow:  0px 3px 0px rgb(158, 158, 158);
+    }
+    h1{
+        width: 31%;
+    }
 }
